added auto-fade class to h2 and div.description elements for border color fade effect

--- a/index.html
+++ b/index.html
@@ -505,19 +505,19 @@
     </div>
     <div class="container mb-5 mw-960">
       <div id="projects-container" class="row lead">
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             Below are a small selection of the many projects I've worked on.
           </p>
         </div>
-        <h2 class="display-6">ApexCV</h2>
+        <h2 class="display-6 auto-fade">ApexCV</h2>
         <figure class="figure mb-0">
           <img class="figure-img img-fluid" src="resources/screens/apex/rois.jpg">
           <figcaption class="figure-caption">
             A screenshot showcasing various regions of interest being highlighted.
           </figcaption>
         </figure>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             This project utilizes a combination of classical template matching and
             the application of a neural network to extract character and numerical
@@ -528,11 +528,11 @@
           </a>
         </div>
 
-        <h2 class="display-6">Motion tracking experiments</h2>
+        <h2 class="display-6 auto-fade">Motion tracking experiments</h2>
         <video class="embed-responsive-item mb-0 p-0" controls autoplay muted loop>
           <source src="resources/video/unique_corner_snatch.mp4" type="video/mp4">
         </video>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             A classical CV motion tracking solution I created. This approach uses the
             harris corner detector and a combination of local and global frame
@@ -540,11 +540,11 @@
           </p>
         </div>
 
-        <h2 class="display-6">Lane detection experiment</h2>
+        <h2 class="display-6 auto-fade">Lane detection experiment</h2>
         <video class="embed-responsive-item mb-0 p-0" controls autoplay muted loop>
           <source src="resources/video/lane_detection.mp4" type="video/mp4">
         </video>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             A classical CV lane detection solution I created. This approach uses the
             a fusion of many openCV operations with the knowledge that lanes point
@@ -558,7 +558,7 @@
         </div>
 
 
-        <h2 class="display-6">CTTP Calibration Application</h2>
+        <h2 class="display-6 auto-fade">CTTP Calibration Application</h2>
         <div id="cttp-calibration" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
             <button type="button" data-bs-target="#cttp-calibration" data-bs-slide-to="0" class="active" aria-current="true"
@@ -598,7 +598,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             A calibration application I created while at CTTP. It assists in managing
             calibration forms and enables internal users to ensure equipment calibration
@@ -606,7 +606,7 @@
           </p>
         </div>
 
-        <h2 class="display-6">CTTP iOS Application</h2>
+        <h2 class="display-6 auto-fade">CTTP iOS Application</h2>
         <div id="cttp-ios" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
             <button type="button" data-bs-target="#cttp-ios" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -697,13 +697,13 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             An iOS application I helped maintain during my time at CTTP.
           </p>
         </div>
 
-        <h2 class="display-6">CSCE 2004 HW6</h2>
+        <h2 class="display-6 auto-fade">CSCE 2004 HW6</h2>
         <div id="csce-2004-hw6" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
             <button type="button" data-bs-target="#csce-2004-hw6" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -738,7 +738,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             A homework assignment I was responsible for creating during my teaching assistantship.
             It builds upon the lore established by other homework assignments and walks the students
@@ -750,7 +750,7 @@
           </a>
         </div>
 
-        <h2 class="display-6">Assistant</h2>
+        <h2 class="display-6 auto-fade">Assistant</h2>
         <figure class="figure">
           <img class="figure-img img-fluid" src="resources/screens/assistant/weather.jpg">
           <figcaption class="figure-caption">
@@ -758,7 +758,7 @@
           </figcaption>
         </figure>
 
-        <h2 class="display-6">Game related projects</h2>
+        <h2 class="display-6 auto-fade">Game related projects</h2>
         <div id="game-related" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
             <button type="button" data-bs-target="#game-related" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -781,13 +781,13 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             Some game related screenshots I've created for other projects.
           </p>
         </div>
 
-        <h2 class="display-6">Review site</h2>
+        <h2 class="display-6 auto-fade">Review site</h2>
         <div id="review-site" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
             <button type="button" data-bs-target="#review-site" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -814,13 +814,13 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             These screenshots come from a review website I created while learning web development.
           </p>
         </div>
 
-        <h2 class="display-6">Social sites</h2>
+        <h2 class="display-6 auto-fade">Social sites</h2>
         <div id="social-site" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
             <button type="button" data-bs-target="#social-site" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -867,13 +867,13 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             These screenshots come from a few social websites I created while learning web development.
           </p>
         </div>
 
-        <h2 class="display-6">Computers</h2>
+        <h2 class="display-6 auto-fade">Computers</h2>
         <div id="computers" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
             <button type="button" data-bs-target="#computers" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -928,7 +928,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="description">
+        <div class="description auto-fade">
           <p>
             A small selection of the many computers and servers I've built over the years
           </p>
