added new position to portfolio

--- a/index.html
+++ b/index.html
@@ -150,7 +150,21 @@
         <div id="work-experience-cards" class="p-0">
           <div id="work-experience-0" class="card mb-5 auto-fade">
             <div class="card-header">
-              Jun 2022 - Present (9 months)
+              Jun 2023 - Present (0 months)
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Senior Security Engineer (AI) @ H&R Block</h3>
+              <p class="card-text ti-3">
+                TBD
+              </p>
+            </div>
+            <div class="card-footer text-muted">
+              TBD
+            </div>
+          </div>
+          <div id="work-experience-1" class="card mb-5 auto-fade">
+            <div class="card-header">
+              Jun 2022 - Present (1 year)
             </div>
             <div class="card-body">
               <h3 class="card-title">Full Stack Engineer @ Freelance</h3>
@@ -190,7 +204,7 @@
               Python, Docker, Django, React, Redux, Stripe
             </div>
           </div>
-          <div id="work-experience-1" class="card mb-5 auto-fade">
+          <div id="work-experience-2" class="card mb-5 auto-fade">
             <div class="card-header">
               Aug 2022 - Dec 2022 (5 months)
             </div>
@@ -237,7 +251,7 @@
               Data Visualization, LaTeX, Lecturing, Debugging Code, C++
             </div>
           </div>
-          <div id="work-experience-2" class="card mb-5 auto-fade">
+          <div id="work-experience-3" class="card mb-5 auto-fade">
             <div class="card-header">
               Feb 2020 - Aug 2022 (2 years 7 months)
             </div>
@@ -286,7 +300,7 @@
               Python, AngularIO, Docker, Django, Machine Learning
             </div>
           </div>
-          <div id="work-experience-3" class="card mb-5 auto-fade">
+          <div id="work-experience-4" class="card mb-5 auto-fade">
             <div class="card-header">
               Aug 2018 - Feb 2020 (1 year 7 months)
             </div>
@@ -341,7 +355,7 @@
               PHP, Docker, MySQL, Symfony Framework, AngularJS, CSS, MS Access
             </div>
           </div>
-          <div id="work-experience-4" class="card mb-5 auto-fade">
+          <div id="work-experience-5" class="card mb-5 auto-fade">
             <div class="card-header">
               May 2018 - Aug 2018 (4 months)
             </div>
@@ -381,7 +395,7 @@
               Optical Character Recognition (OCR), Flask, Python, Machine Learning, Computer Vision
             </div>
           </div>
-          <div id="work-experience-5" class="card mb-5 auto-fade">
+          <div id="work-experience-6" class="card mb-5 auto-fade">
             <div class="card-header">
               Dec 2016 - May 2018 (1 year 6 months)
             </div>
@@ -445,7 +459,7 @@
               OpenStreetMap, MQTT, Laravel, Docker, PHP
             </div>
           </div>
-          <div id="work-experience-6" class="card auto-fade">
+          <div id="work-experience-7" class="card auto-fade">
             <div class="card-header">
               Feb 2016 - May 2018 (2 years 4 months)
             </div>
