Added js-map-generator link

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
         </div>
         <div class="description auto-fade">
           <p>
-            Some game related screenshots I've created for other projects.
+            Some game related screenshots I've created for other projects. Click <a href="http://ramity.github.io/js-map-generator/" target="_blank">here</a> to view the map generator.
           </p>
         </div>
 
