Updated hrb description + removed console.log from work-experience-timeline js file

--- a/index.html
+++ b/index.html
@@ -150,21 +150,39 @@
         <div id="work-experience-cards" class="p-0">
           <div id="work-experience-0" class="card mb-5 auto-fade">
             <div class="card-header">
-              Jun 2023 - Present (0 months)
+              Jun 2023 - Present (2 months)
             </div>
             <div class="card-body">
               <h3 class="card-title">Senior Security Engineer (AI) @ H&R Block</h3>
               <p class="card-text ti-3">
-                TBD
+                I currently work as a senior security engineer within the security
+                development team at H&R block. I wear many hats and contribute to
+                a wide range of projects and software areas, acting as a consultant
+                and team player where needed. I serve as a generalist by applying
+                my diverse skillset in cybersecurity, web development, and AI, and
+                serve as my team's primary contact for cybersecurity and AI related
+                work.
+              </p>
+              <p class="card-text ti-3">                
+                So far, I've contributed to infrastrcture design, applied
+                cybersecurity knowledge, developed front and backend software,
+                and investigated areas where the application of AI could be
+                beneficial for the company.
+
+                During the day-to-day, I share the workload of task
+                management with the team's lead engineer for a cross-functional'
+                team composed of designers, developers, and engineers, provide
+                consulting to other teams, and develop software for the many
+                ongoing projects.
               </p>
             </div>
             <div class="card-footer text-muted">
-              TBD
+              Dotnet, Docker, Azure, Angular, Python, Machine Learning, MSSQL
             </div>
           </div>
           <div id="work-experience-1" class="card mb-5 auto-fade">
             <div class="card-header">
-              Jun 2022 - Present (1 year)
+              Jun 2022 - Jun 2023 (1 year)
             </div>
             <div class="card-body">
               <h3 class="card-title">Full Stack Engineer @ Freelance</h3>
