Minimized opening statement and about me, enhanced HRB job description

--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@
       <div class="row">
         <div id="opening-statement" class="lead p-5 auto-fade">
           <p class="m-0 ti-3">
-            Hi, I'm Lewis Brown, a software engineer with a passion for building
-            innovative solutions that solve real-world problems. With over
-            7 years of professional experience, 4 years of successful freelance work,
-            and 3 years of academic research, I bring a wealth of expertise to every
-            project I undertake.
-
-            My career in software has been composed of commercial, freelance, academic,
-            and research positions with my work seeing use in the aviation, automotive,
-            construction, electric power, food, transportation, and retail industries.
-            I'm a published scholar with two produced works with my thesis presenting
-            a new form of distributed machine learning.
+            Hi! I'm Lewis Brown, a software engineer with a passion for building
+            innovative solutions that solve real-world problems. I've worked in software
+            for over 8 years, during which, my career has taken me on a journey exploring
+            commercial, freelance, academic, and research positions. I've worked on a wide range
+            of cross dimiplanary projects, contributing software solutions within aviation,
+            automotive, construction, electric power, food, transportation, and retail industries.
+            I'm a published scholar with two academic journal published papers and successfully
+            defended a my thesis presenting a new form of distributed and privacy preserving machine learning.
 
             My unique value proposition lies in my deep foundations in web and research
             level understanding of AI fusing to create highly accessible and interactive
@@ -95,15 +92,6 @@
       <div class="row">
         <div id="about-me-prompt" class="lead p-5 auto-fade">
           <p class="m-0 mb-3 ti-3">
-            Versatile and results-driven engineer with a passion for developing
-            innovative software solutions. With a background in machine learning
-            engineering, full stack web development, and software engineering,
-            my horizontal development experience brings a unique blend of
-            technical and project management skills to the table.
-            I'm skilled in a wide range of programming languages and have experience
-            working with a variety of frameworks.
-          </p>
-          <p class="m-0 mb-3 ti-3">
             With my academic research background, I'm passionate about staying up-to-date
             with the latest developments in the field and have a keen interest in
             exploring new research and techniques. One of my most exciting projects
@@ -111,7 +99,7 @@
             the use of a ML library. Doing so required a high volume of investigation,
             persistence, and creativity to execute.
           </p>
-          <p class="m-0 mb-3 ti-3">
+          <p class="m-0 ti-3">
             In my free time, I enjoy a variety of hobbies and interests. I'm an avid
             reader and spend a lot of time online reading articles and books about a
             variety of topics. I'm also passionate about strength training, which
@@ -123,12 +111,6 @@
             and customizing computers and commonly do so for many of my friends.
             Lastly, I'm an avid gamer and love to challenge myself with difficult
             games. These hobbies help me unwind and keep my mind engaged outside of work.
-          </p>
-          <p class="m-0 ti-3">
-            If you're looking for a talented and driven engineer to help take your
-            projects to the next level or believe you have a challenging problem to solve,
-            I'd love to hear from you. Please feel free to get in touch to learn
-            more about my experience and skills.
           </p>
         </div>
       </div>
@@ -150,30 +132,22 @@
         <div id="work-experience-cards" class="p-0">
           <div id="work-experience-0" class="card mb-5 auto-fade">
             <div class="card-header">
-              Jun 2023 - Present (2 months)
+              Jun 2023 - Present (1 year 6 months)
             </div>
             <div class="card-body">
               <h3 class="card-title">Senior Security Engineer (AI) @ H&R Block</h3>
               <p class="card-text ti-3">
-                I currently work as a senior security engineer within the security
-                development team at H&R block. I wear many hats and contribute to
-                a wide range of projects and software areas, acting as a consultant
-                and team player where needed. I serve as a generalist by applying
-                my diverse skillset in cybersecurity, web development, and AI, and
-                serve as my team's primary contact for cybersecurity and AI related
-                work.
+                I currently work within the security development team at H&R Block.
+                We're a very small group of engineers that field internal asks for software solutions.
+                I wear many hats and solely contribute to, "FraudEngine", a project designed
+                to identify and classify fraudulent tax returns in realtime, across the org.
               </p>
-              <p class="card-text ti-3">                
-                So far, I've contributed to infrastrcture design, applied
-                cybersecurity knowledge, developed front and backend software,
-                and investigated areas where the application of AI could be
-                beneficial for the company.
-
-                During the day-to-day, I share the workload of task
-                management with the team's lead engineer for a cross-functional'
-                team composed of designers, developers, and engineers, provide
-                consulting to other teams, and develop software for the many
-                ongoing projects.
+              <p class="card-text ti-3">
+                This position has challenged me in so many ways. The sheer volume of
+                incoming requests alone the application has to handle is on a level
+                I've never had the pleasure of optimizing for before. That, coupled
+                with the seasonality of tax prep work, creates a requirement for making
+                applications that can scale to meet unthinkable request volumes.
               </p>
             </div>
             <div class="card-footer text-muted">
