resigned from hrb

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div id="work-experience-cards" class="p-0">
           <div id="work-experience-0" class="card mb-5 auto-fade">
             <div class="card-header">
-              Jun 2023 - Present (1 year 6 months)
+              Jun 2023 - Dec 2024 (1 year 7 months)
             </div>
             <div class="card-body">
               <h3 class="card-title">Senior Security Engineer (AI) @ H&R Block</h3>
