added braillest to experiences

--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@
         <div id="work-experience-cards" class="p-0">
           <div id="work-experience-0" class="card mb-5 auto-fade">
             <div class="card-header">
+              Jan 2025 - present (3 months)
+            </div>
+            <div class="card-body">
+              <h3 class="card-title">Owner @ Braillest LLC</h3>
+              <p class="card-text ti-3">
+                I designed and prototyped a novel additive manufacturing approach to produce braille literature at a significantly lower cost than existing approaches.
+                To streamline the production process, I developed a process that converts imported text into STL models, which are then used to emboss the corresponding braille.
+                Currently, I am focused on automating the manufacturing process to efficiently scale production and establish a ready-to-ship inventory for an upcoming online storefront.
+              </p>
+            </div>
+            <div class="card-footer text-muted">
+              Docker, Python, PHP, CAD, 3D Printing, Braille, Stripe
+            </div>
+          </div>
+          <div id="work-experience-1" class="card mb-5 auto-fade">
+            <div class="card-header">
               Jun 2023 - Dec 2024 (1 year 7 months)
             </div>
             <div class="card-body">
@@ -120,7 +136,7 @@
               Dotnet, Docker, Azure, Angular, Python, Machine Learning, MSSQL
             </div>
           </div>
-          <div id="work-experience-1" class="card mb-5 auto-fade">
+          <div id="work-experience-2" class="card mb-5 auto-fade">
             <div class="card-header">
               Jun 2022 - Jun 2023 (1 year)
             </div>
@@ -140,7 +156,7 @@
               Python, Docker, Django, React, Redux, Stripe
             </div>
           </div>
-          <div id="work-experience-2" class="card mb-5 auto-fade">
+          <div id="work-experience-3" class="card mb-5 auto-fade">
             <div class="card-header">
               Aug 2022 - Dec 2022 (5 months)
             </div>
@@ -160,7 +176,7 @@
               Data Visualization, LaTeX, Lecturing, Debugging Code, C++
             </div>
           </div>
-          <div id="work-experience-3" class="card mb-5 auto-fade">
+          <div id="work-experience-4" class="card mb-5 auto-fade">
             <div class="card-header">
               Feb 2020 - Aug 2022 (2 years 7 months)
             </div>
@@ -182,7 +198,7 @@
               Python, AngularIO, Docker, Django, Machine Learning
             </div>
           </div>
-          <div id="work-experience-4" class="card mb-5 auto-fade">
+          <div id="work-experience-5" class="card mb-5 auto-fade">
             <div class="card-header">
               Aug 2018 - Feb 2020 (1 year 7 months)
             </div>
@@ -207,7 +223,7 @@
               PHP, Docker, MySQL, Symfony Framework, AngularJS, CSS, MS Access
             </div>
           </div>
-          <div id="work-experience-5" class="card mb-5 auto-fade">
+          <div id="work-experience-6" class="card mb-5 auto-fade">
             <div class="card-header">
               May 2018 - Aug 2018 (4 months)
             </div>
@@ -224,7 +240,7 @@
               Optical Character Recognition (OCR), Flask, Python, Machine Learning, Computer Vision
             </div>
           </div>
-          <div id="work-experience-6" class="card mb-5 auto-fade">
+          <div id="work-experience-7" class="card mb-5 auto-fade">
             <div class="card-header">
               Dec 2016 - May 2018 (1 year 6 months)
             </div>
@@ -249,7 +265,7 @@
               OpenStreetMap, MQTT, Laravel, Docker, PHP
             </div>
           </div>
-          <div id="work-experience-7" class="card auto-fade">
+          <div id="work-experience-8" class="card auto-fade">
             <div class="card-header">
               Feb 2016 - May 2018 (2 years 4 months)
             </div>
