--- a/index.html
+++ b/index.html
@@ -572,6 +572,12 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <img src="resources/computers/11.jpg" class="d-block w-100">
+            </div>
+            <div class="carousel-item active">
+              <img src="resources/computers/10.jpg" class="d-block w-100">
+            </div>
+            <div class="carousel-item active">
               <img src="resources/computers/9.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
@@ -581,16 +587,10 @@
               <img src="resources/computers/7.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="resources/computers/6.jpg" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
               <img src="resources/computers/5.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
               <img src="resources/computers/4.jpg" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-              <img src="resources/computers/3.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
               <img src="resources/computers/2.jpg" class="d-block w-100">
