fixed active class copy paste mistake

--- a/index.html
+++ b/index.html
@@ -574,10 +574,10 @@
             <div class="carousel-item active">
               <img src="resources/computers/11.jpg" class="d-block w-100">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
               <img src="resources/computers/10.jpg" class="d-block w-100">
             </div>
-            <div class="carousel-item active">
+            <div class="carousel-item">
               <img src="resources/computers/9.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
